@@ -32,6 +32,7 @@ enum guCommandIds {
     ID_MENU_QUIT,
     ID_MENU_PREFERENCES,
     ID_MENU_VIEW_STATUSBAR,
+    ID_MENU_VIEW_FULLSCREEN,
     ID_MENU_VIEW_PLAYER_PLAYLIST,
     ID_MENU_VIEW_PLAYER_FILTERS,
     ID_MENU_VIEW_PLAYER_VUMETERS,
